--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -9,11 +9,11 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Summary"
-        android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,8 +21,8 @@
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Veja abaixo o resumo da sua conta"
         android:layout_marginTop="8dp"
+        android:text="Veja abaixo o resumo da sua conta"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -30,26 +30,26 @@
         android:id="@+id/tv_total_table_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="total table:"
         android:layout_marginTop="32dp"
+        android:text="total table:"
         app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
         app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />
 
     <TextView
         android:id="@+id/tv_total_table"
         android:layout_width="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="R$ 250,00"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_total_table_label"
-        android:text="R$ 250,00"/>
+        app:layout_constraintTop_toTopOf="@+id/tv_total_table_label" />
 
     <TextView
         android:id="@+id/tv_num_people_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="num of people:"
         android:layout_marginTop="32dp"
+        android:text="num of people:"
         app:layout_constraintStart_toStartOf="@+id/tv_total_table_label"
         app:layout_constraintTop_toBottomOf="@+id/tv_total_table_label" />
 
@@ -60,14 +60,14 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_num_people_label"
-        tools:text="5"/>
+        tools:text="5" />
 
     <TextView
         android:id="@+id/tv_percentage_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="percentage:"
         android:layout_marginTop="32dp"
+        android:text="percentage:"
         app:layout_constraintStart_toStartOf="@+id/tv_num_people_label"
         app:layout_constraintTop_toBottomOf="@+id/tv_num_people_label" />
 
@@ -78,16 +78,16 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_percentage_label"
-        tools:text="15%"/>
+        tools:text="15%" />
 
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_percentage_label" />
@@ -96,8 +96,8 @@
         android:id="@+id/tv_total_amount_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TOTAL:"
         android:layout_marginTop="16dp"
+        android:text="TOTAL:"
         app:layout_constraintStart_toStartOf="@+id/tv_num_people_label"
         app:layout_constraintTop_toBottomOf="@+id/separator" />
 
@@ -105,19 +105,19 @@
         android:id="@+id/tv_total_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_total_amount_label"
-        tools:text="R$ 57,50"/>
+        tools:text="R$ 57,50" />
 
     <Button
         android:id="@+id/btn_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="refresh"
         android:layout_margin="16dp"
+        android:text="refresh"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
